Fix broken layout on laptop

--- a/public/sass/components/_plan.scss
+++ b/public/sass/components/_plan.scss
@@ -19,6 +19,7 @@
 
   &__currency-unit {
     font-weight: bold;
+    font-size: 1rem;
   }
 
   &__text {
