--- a/public/sass/modules/_card.scss
+++ b/public/sass/modules/_card.scss
@@ -21,7 +21,7 @@
   }
 
   &__body {
-    margin-bottom: 1rem;
+    margin-bottom: 1.2rem;
     flex: 1;
 
     &--top-spacing {
